k8s/02-apps/auth-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-services
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-services
  template:
    metadata:
      labels:
        app: auth-services
    spec:
      containers:
        - name: auth-services
          image: auth-services:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: auth-services
  namespace: microservices-study
spec:
  selector:
    app: auth-services
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
    - protocol: TCP
      port: 4003
      targetPort: 4003
      name: tcp
