k8s/02-apps/billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          image: billing-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4007
            - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: microservices-study
spec:
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 4007
      targetPort: 4007
      name: tcp
    - protocol: TCP
      port: 3010
      targetPort: 3010
      name: http
