k8s/02-apps/fleet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-service
  template:
    metadata:
      labels:
        app: fleet-service
    spec:
      containers:
        - name: fleet-service
          image: fleet-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-service
  namespace: microservices-study
spec:
  selector:
    app: fleet-service
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
