k8s/02-apps/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: inventory-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: microservices-study
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 4006
      targetPort: 4006
