k8s/02-apps/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microservices-study
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
