k8s/02-apps/pedidos-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos-service
  template:
    metadata:
      labels:
        app: pedidos-service
    spec:
      containers:
        - name: pedidos-service
          image: pedidos-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service
  namespace: microservices-study
spec:
  selector:
    app: pedidos-service
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
