k8s/02-apps/tracking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
  namespace: microservices-study
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
        - name: tracking-service
          image: tracking-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4008
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
  namespace: microservices-study
spec:
  selector:
    app: tracking-service
  ports:
    - protocol: TCP
      port: 4008
      targetPort: 4008
